# pyramm

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  coverage.sh  publish.md  pyproject.toml  run_coverage.sh  setup.py
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: autoblack.yml  checks.yml  formatting-check.yml  merge.yml  push.yml  pyramm.yml  python-publish.yml  run-tests.yml
pyramm/: __init__.py  api.py  cache.py  config.py  constants.py  db.py  geometry.py  helpers.py  logging.py  tables.py
pyramm/ops/: __init__.py  top_surface.py
pyramm/tests/: test_api.py  test_pyramm.py
tests/: __init__.py  conftest.py  test_geometry.py  test_nearest_feature.ipynb  test_ops.py  test_pyramm.py
