[tool.poetry]
name = "pyramm"
version = "1.36"
description = "Provides a wrapper to the RAMM API and additional tools for positional referencing"
authors = ["John Bull"]
homepage = "https://github.com/captif-nz/pyramm"
license = "MIT"
readme = "README.md"
keywords = ["CAPTIF", "RAMM"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
unsync = "^1.4.0"
frozendict = "^2.4.6"
geopandas = "^1.0.1"
pandas = "^2.2.3"
numpy = "^2.1.2"
scipy = "^1.14.1"
shapely = "^2.0.6"
pyproj = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"
black = "^24.10.0"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
pytest-randomly = "^3.16.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
